--- a/frontend/bible-verse/src/app/verse/verse.component.html
+++ b/frontend/bible-verse/src/app/verse/verse.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div [@slideIn] class="wrapper">
     <div class="verse">
         <h2> Daily Verse</h2>
         <p>This is the daily verse</p>
