--- a/frontend/bible-verse/src/app/header/header.component.html
+++ b/frontend/bible-verse/src/app/header/header.component.html
@@ -7,15 +7,13 @@
             <i class="material-icons">{{ isMenuOpen ? "close" : "menu" }}</i>
         </li>
         <li class="menu" [class.is-open]="isMenuOpen">
+            <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#home"
+                class="menu-item">Home</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#about" class="menu-item">About</a>
-            <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#work-exp"
-                class="menu-item">Experience</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#certifications"
-                class="menu-item">Certifications</a>
+                class="menu-item">Contact Us</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#projects"
-                class="menu-item">Projects</a>
-                <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#courses"
-                class="menu-item">Courses</a>
+                class="menu-item">Login</a>
         </li>
     </ul>
 </nav>
