backend and frontend connection

--- a/frontend/bible-verse/src/app/verse/verse.component.html
+++ b/frontend/bible-verse/src/app/verse/verse.component.html
@@ -1,6 +1,8 @@
 <div [@slideIn] class="wrapper">
-    <div class="verse">
-        <h2> Daily Verse</h2>
-        <p>This is the daily verse</p>
+    <div class="verse-container">
+        <h2> {{verse.chapter}}</h2>
+        <!-- <h3>{{verse.chapter}}</h3> -->
+        <p>{{verse.verse}}</p>
+
     </div>
 </div>
