--- a/frontend/bible-verse/src/app/verse/verse.component.scss
+++ b/frontend/bible-verse/src/app/verse/verse.component.scss
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.verse {
+.verse-container {
     border: 2px solid gray;
     width:50%;
     background-color: inherit;
@@ -16,11 +16,21 @@
     align-items: center;
 }
 
+// .verse-field {
+//     display: inline-flex;
+// }
+
 h2 {
     text-align: center;
     color: white;
 }
-
+h3 {
+    text-align: center;
+    color: white;
+    //float:left;
+    margin-left: -50%;
+    //margin-bottom: 40px;
+}
 p {
     text-align: center;
     color: white;
