--- a/frontend/bible-verse/src/app/header/header.component.html
+++ b/frontend/bible-verse/src/app/header/header.component.html
@@ -1,18 +1,18 @@
 <nav id="my-first">
     <ul>
         <li class="logotype">
-            <a href="#banner">Bible-Verse</a>
+            <a routerLink="">Bible-Verse</a>
         </li>
         <li class="burger" (click)="toggleMenu()">
             <i class="material-icons">{{ isMenuOpen ? "close" : "menu" }}</i>
         </li>
         <li class="menu" [class.is-open]="isMenuOpen">
-            <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#home"
+            <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" routerLink=""
                 class="menu-item">Home</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#about" class="menu-item">About</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#certifications"
                 class="menu-item">Contact Us</a>
-            <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#projects"
+            <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" routerLink="login"
                 class="menu-item">Login</a>
         </li>
     </ul>
