--- a/frontend/bible-verse/src/styles.scss
+++ b/frontend/bible-verse/src/styles.scss
@@ -1,4 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { margin:0px; height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: black; }
+html,
+body {
+    margin: 0px;
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: black;
+}
+
+@media only screen and (max-width:480px) and (max-height: 844px) {
+    body {
+        width: 100%;
+        //position:fixed;
+    }
+}
