--- a/frontend/bible-verse/src/app/header/header.component.html
+++ b/frontend/bible-verse/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         </li>
         <li class="menu" [class.is-open]="isMenuOpen">
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" routerLink="" class="menu-item">Home</a>
-            <a *ngIf="service.isLoggedIn() && user.isSpecial > 0" (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" routerLink="" class="menu-item">Pill Tracker</a>
+            <a *ngIf="service.isLoggedIn() && service.checkSpecial() > 0" (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" routerLink="trackPill" class="menu-item">Pill Tracker</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#about" class="menu-item">About</a>
             <a (click)="toggleMenu()" pageScroll [pageScrollDuration]="500" href="#certifications"
                 class="menu-item">Contact Us</a>
