pill-track page

--- a/frontend/bible-verse/src/app/pill-tracker/pill-tracker.component.html
+++ b/frontend/bible-verse/src/app/pill-tracker/pill-tracker.component.html
@@ -1,1 +1,18 @@
-<p>pill-tracker works!</p>
+<div id="pillPage">
+    <h1>Pill Tracker</h1>
+
+    <button class="taken-button" mat-raised-button color="primary">Primary</button>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Pill</th>
+        </tr>
+        <tr>
+            <td>Stefan</td>
+            <td>10/12/2023</td>
+            <td>taken</td>
+        </tr>
+    </table>
+</div>
