--- a/frontend/bible-verse/src/app/pill-tracker/pill-tracker.component.html
+++ b/frontend/bible-verse/src/app/pill-tracker/pill-tracker.component.html
@@ -9,9 +9,9 @@
             <th>Date</th>
             <th>Pill</th>
         </tr>
-        <tr>
-            <td>Stefan</td>
-            <td>10/12/2023</td>
+        <tr *ngFor="let pill of pillList">
+            <td>{{pill.username}}</td>
+            <td>{{pill.dateTaken | date: "dd/MM/yyy HH:mm"}}</td>
             <td>taken</td>
         </tr>
     </table>
